--- a/nginx.conf
+++ b/nginx.conf
@@ -47,11 +47,11 @@ http {
           root   /usr/share/nginx/html;
           try_files $uri /images/placeholder.jpg;
         }
-        location /api/catalogue/ { proxy_pass catalogue.sh.daws89s.fun:8080/; }
-        location /api/user/ { proxy_pass user.daws89s.fun:8080/; }
-        location /api/cart/ { proxy_pass cart.daws89s.fun:8080/; }
-        location /api/shipping/ { proxy_pass shipping.daws89s.fun:8080/; }
-        location /api/payment/ { proxy_pass payment.daws89s.fun:8080/; }
+        location /api/catalogue/ { proxy_pass http://catalogue.daws89s.fun:8080/; }
+        location /api/user/ { proxy_pass http://user.daws89s.fun:8080/; }
+        location /api/cart/ { proxy_pass http://cart.daws89s.fun:8080/; }
+        location /api/shipping/ { proxy_pass http://shipping.daws89s.fun:8080/; }
+        location /api/payment/ { proxy_pass http://payment.daws89s.fun:8080/; }
 
         location /health {
           stub_status on;
